--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -25,6 +26,7 @@
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "openai": "^5.12.2",
+    "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "stripe": "^18.2.1",
     "validator": "^13.15.15"
