--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "openai": "^5.12.2",
+    "react-hot-toast": "^2.6.0",
     "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "stripe": "^18.2.1",
